Add Pagination and Search
