# laravel.pv113.com/routes/api.php
@@ -4,6 +4,7 @@ use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use \App\Http\Controllers\Api\CategoriesController;
 use App\Http\Controllers\Api\SenderController;
+use \App\Http\Controllers\Api\AuthController;
 
 Route::get('/user', function (Request $request) {
     return $request->user();
@@ -16,3 +17,5 @@ Route::delete("/categories/{id}", [CategoriesController::class, "delete"]);
 Route::post("/categories/edit/{id}", [CategoriesController::class, "edit"]);
 
 Route::post('/send/email', [SenderController::class, 'send_email']);
+
+Route::post('/login', [AuthController::class, 'login']);
